# ScreenMacro

./: Cargo.toml  README.md
src/: main.rs
src/macro_logic/: macro_base.rs  macro_serde.rs  macro_settings.rs  mod.rs  util.rs
src/style/: mod.rs  text_button_style.rs
src/ui/: base.rs  macro_menu.rs  main_menu.rs  mod.rs
src/ui/components/: file_choose_component.rs  image_input_component.rs  macro_menu.rs  macro_step_component.rs  main_menu.rs  mod.rs  modifiers_chooser_component.rs  my_numeric_input.rs  percent_text_input.rs  settings_component.rs  time_input.rs
src/ui/style/: container_styles.rs
