[package]
name = "screen-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.4", features = ["pure", "svg", "image"]}
iced_lazy = {version = "0.1.1", features = ["pure"]}
iced_pure = "0.2.2"
iced_native = "0.5.1"
rfd = "0.10.0"
image = "^0.22.0"
clippers = "0.1.2"
iced_aw = {version = "0.2.0", features = ["modal", "card"]}
anyhow = "1.0.65"
autopilot = "0.4.0"